# linux-service-manager

./: .gitignore  CMakeLists.txt  README.md  config.json
include/svc/: config.h  dust-cleaner.h  handler.h  http.h  httpc.h  json-config.h  logger.h  manager.h  time-range.h
src/: config.cpp  dust-cleaner.cpp  handler.cpp  http.cpp  httpc.cpp  json-config.cpp  logger.cpp  manager.cpp  service-test.cpp  service.cpp  time-range.cpp
